2019-10-31  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.target/aarch64/sve/reduc_strict_3.c: Split all but the
	first function out into...
	* gcc.target/aarch64/sve/reduc_strict_4.c,
	* gcc.target/aarch64/sve/reduc_strict_5.c,
	* gcc.target/aarch64/sve/reduc_strict_6.c,
	* gcc.target/aarch64/sve/reduc_strict_7.c,
	* gcc.target/aarch64/sve/reduc_strict_8.c,
	* gcc.target/aarch64/sve/reduc_strict_9.c: ...these new tests.
	Test for scalable vectors instead of 256-bit vectors.

2019-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/92284
	* gfortran.dg/bind_c_array_params_3_aux.c: Include
	../../../libgfortran/ISO_Fortran_binding.h rather than
	ISO_Fortran_binding.h.

2019-10-31  Tobias Burnus  <tobias@codesourcery.com>

	* gfortran.dg/achar_2.f90: Remove bogus line from
	last commit.

2019-10-31  Tobias Burnus  <tobias@codesourcery.com>

	* gfortran.dg/achar_2.f90: Print 'DONE' and add dg-output.

2019-10-31  Andre Vieira  <andre.simoesdiasvieira@arm.com>

	* gcc.target/aarch64/sve/reduc_strict_3.c: Fix option order.
	* gcc.target/i386/avx-vzeroupper-19.c: Likewise.
	* gcc.target/i386/avx2-vect-mask-store-move1.c: Likewise.
	* gcc.target/i386/avx512f-gather-2.c: Likewise.
	* gcc.target/i386/avx512f-gather-5.c: Likewise.
	* gcc.target/i386/l_fma_double_1.c: Likewise.
	* gcc.target/i386/l_fma_double_2.c: Likewise.
	* gcc.target/i386/l_fma_double_3.c: Likewise.
	* gcc.target/i386/l_fma_double_4.c: Likewise.
	* gcc.target/i386/l_fma_double_5.c: Likewise.
	* gcc.target/i386/l_fma_double_6.c: Likewise.
	* gcc.target/i386/l_fma_float_1.c: Likewise.
	* gcc.target/i386/l_fma_float_2.c: Likewise.
	* gcc.target/i386/l_fma_float_3.c: Likewise.
	* gcc.target/i386/l_fma_float_4.c: Likewise.
	* gcc.target/i386/l_fma_float_5.c: Likewise.
	* gcc.target/i386/l_fma_float_6.c: Likewise.
	* gcc.target/i386/mask-pack.c: Likewise.
	* gcc.target/i386/mask-unpack.c: Likewise.

2019-10-31  Tobias Burnus  <tobias@codesourcery.com>

	PR fortran/92284